--- a/ar.html
+++ b/ar.html
@@ -55,17 +55,42 @@
       top: 2rem;
       left: 50%;
       transform: translateX(-50%);
-      font-size: 2rem;
-      color: #ffd700;
-      background: rgba(0,0,0,0.7); /* Dark semi-transparent background */
-      padding: 0.7rem 2rem;
-      border-radius: 1rem;
+      font-size: 2.5rem; /* Increased from 2rem */
+      font-weight: 700; /* Bold text for better readability */
+      color: #ffffff; /* Pure white for maximum contrast */
+      background: rgba(0,0,0,0.9); /* Higher opacity for better contrast */
+      padding: 1.2rem 2.5rem; /* More padding for better touch targets */
+      border-radius: 1.5rem;
       font-family: 'Montserrat', 'Segoe UI', 'Arial', sans-serif;
-      box-shadow: 0 2px 16px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 20px rgba(0,0,0,0.6), 0 0 0 3px rgba(255,215,0,0.8); /* Added golden border */
       opacity: 0;
       pointer-events: none;
       transition: opacity 0.3s;
-      z-index: 15; /* Higher z-index to appear above AR */
+      z-index: 15;
+      text-align: center;
+      line-height: 1.3; /* Better line spacing */
+      max-width: 90vw; /* Prevent overflow on small screens */
+      word-wrap: break-word; /* Handle long text */
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.8); /* Text shadow for better readability */
+    }
+    
+    /* High contrast mode support */
+    @media (prefers-contrast: high) {
+      #label {
+        background: #000000;
+        color: #ffffff;
+        border: 4px solid #ffffff;
+        font-weight: 900;
+      }
+    }
+    
+    /* Larger text for accessibility */
+    @media (max-width: 768px) {
+      #label {
+        font-size: 2rem; /* Slightly smaller on mobile but still large */
+        padding: 1rem 2rem;
+        top: 1.5rem;
+      }
     }
     #back-btn {
       position: absolute;
@@ -124,7 +149,7 @@
   <script>
     // Replace with your image labels, index corresponds to targetIndex in MindAR
     const labels = [
-      "Mona Lisa",
+      "Mosè domanda al Faraone il permesso di lasciare l'Egitto con gli ebrei",
       "Starry Night",
       "The Scream",
       // ... up to your 30 labels
