--- a/ar.html
+++ b/ar.html
@@ -143,7 +143,7 @@
       
       <!-- Simplified AR target with just text -->
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-text value="Museum Artifact Detected!" color="#FFD700" align="center" position="0 0 0" scale="0.5 0.5 0.5"></a-text>
+        <a-text value="Mosè domanda al Faraone il permesso di lasciare l'Egitto con gli ebrei" color="#FFD700" align="center" position="0 0 0" scale="0.5 0.5 0.5"></a-text>
       </a-entity>
     </a-scene>
   </div>
